potential fix for deck check

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,8 @@
   "Prefix": "*",
   "defaultDeck": "Rider Waite",
   "presence": [
-    "for messages",
-    "this is a test"
+    "this is a test",
+    "this is a second test",
+    "this is a third test"
   ]
 }
