--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,3 @@
 {
-  "Prefix": "*",
-  "defaultDeck": "Rider Waite",
-  "presence": [
-    "for messages",
-    "this is a test"
-  ]
+  "Prefix": "^"
 }
